# axum_blog

./: Cargo.toml
migrations/: 20240102_create_users_table_up.sql
src/: handlers.rs  jwt_auth.rs  main.rs
src/models/: user.rs
