[package]
name = "axum_blog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.3"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = [
  "runtime-tokio-rustls",
  "any",
  "postgres",
] }
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }

axum-extra = { version = "0.9.0", features = ["cookie"] }
chrono = { version = "0.4.24", features = ["serde"] }
jsonwebtoken = "9.2.0"
serde_json = "1.0.95"
uuid = { version = "1.3.0", features = ["serde", "v4"] }
argon2 = "0.5.0"
